--- a/lab-python-flow-control.ipynb
+++ b/lab-python-flow-control.ipynb
@@ -37,6 +37,176 @@
     "\n",
     "3. Instead of updating the inventory by subtracting 1 from the quantity of each product, only do it for  the products that were ordered (those in \"customer_orders\")."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "148376e6-c51d-4bff-b054-a5108da8e444",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = [\"t-shirt\", \"mug\", \"hat\", \"book\", \"keychain\"]\n",
+    "\n",
+    "inventory = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "80211f00-d132-44a9-92de-e693e57ef833",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the quantity available for t-shirt:  4\n",
+      "Enter the quantity available for mug:  6\n",
+      "Enter the quantity available for hat:  3\n",
+      "Enter the quantity available for book:  6\n",
+      "Enter the quantity available for keychain:  7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for product in products:\n",
+    "    quantity = int(input(f\"Enter the quantity available for {product}: \"))\n",
+    "    inventory[product] = quantity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "664a4d69-3cbc-44d1-b207-c0c369371186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_orders = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "57d56e44-5678-4b4d-8626-c9d599b3c7ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of product to order:  mug\n",
+      "Do you want to add another product? (yes/no):  yes\n",
+      "Enter the name of product to order:  hat\n",
+      "Do you want to add another product? (yes/no):  yes\n",
+      "Enter the name of product to order:  pencil\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pencil is not in the available products list.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter the name of product to order:  book\n",
+      "Do you want to add another product? (yes/no):  no\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    order = input(f\"Enter the name of product to order: \")\n",
+    "    if order in products:\n",
+    "        customer_orders.add(order)\n",
+    "        another_order = input(\"Do you want to add another product? (yes/no): \")\n",
+    "        if another_order != \"yes\":\n",
+    "            break\n",
+    "    else:\n",
+    "        print (f\"{order} is not in the available products list.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4f8053ff-d5ab-4ce1-a9a1-41b8738d65c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'mug', 'book', 'hat'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(customer_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7354c223-f5b5-4bce-98f3-fd249305fee7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inventory[\"mug\"] = 5\n",
+    "inventory[\"hat\"] = 2\n",
+    "inventory[\"book\"] = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1301520f-739b-41e7-9154-0a66989588e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'t-shirt': 4, 'mug': 5, 'hat': 2, 'book': 5, 'keychain': 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inventory)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "db3fac97-1a6c-4e0f-b5d7-dd0c453f4876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t-shirt: 4\n",
+      "mug: 5\n",
+      "hat: 2\n",
+      "book: 5\n",
+      "keychain: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for product, quantity in inventory.items():\n",
+    "    print(f\"{product}: {quantity}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0afcc01-4caa-4482-807d-2a68876e403c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -55,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
